{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 21,
  "lineage": "cd18a8c1-3a97-eab5-76fc-b9bbf4946cec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:915258950910:loadbalancer/terraform-elb-node-app",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-elb-node-app-1055589153.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:3000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-elb-node-app",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 3000,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-elb-node-app",
            "security_groups": [
              "sg-04992a734878daf96"
            ],
            "source_security_group": "915258950910/security_group_for_elb",
            "source_security_group_id": "sg-04992a734878daf96",
            "subnets": [
              "subnet-0998f7d356e4eafcb",
              "subnet-0e0c1e11dae510f66"
            ],
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.elbsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:915258950910:security-group/sg-04992a734878daf96",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04992a734878daf96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "security_group_for_elb",
            "name_prefix": "",
            "owner_id": "915258950910",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c160fb89148d4e71"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_app_websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:915258950910:security-group/sg-09d7ac973b07cc996",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09d7ac973b07cc996",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "security_group_for_node_app_websg",
            "name_prefix": "",
            "owner_id": "915258950910",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c160fb89148d4e71"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}